@@ -1,0 +1,13 @@
+#include "EntityZone.h"
+
+
+EntityZone::EntityZone()
+{
+	entities.reserve(32);
+}
+
+
+EntityZone::~EntityZone()
+{
+	entities.clear();
+}
