@@ -1,0 +1,13 @@
+#pragma once
+#include <vector>
+
+class Entity;
+
+class EntityZone
+{
+public:
+	EntityZone();
+	~EntityZone();
+	std::vector<Entity*> entities;
+};
+
